--- a/src/css/App.css
+++ b/src/css/App.css
@@ -48,8 +48,8 @@ a {
  Login Page
 **************************************************************/
 .main-login-container {
-  width: 98vw;
-  height: 98vh;
+  width: 97.5vw;
+  height: 100%;
   margin-right: 1%;
   background: radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
     url(../images/cover2.png) no-repeat center center/cover;
